client/src/css/courseTable.css
.selectedCourseContainer {
	width: 100%;
	overflow-x: auto;

	margin-left: auto;
	margin-right: auto;
}

.selectedCourseContainer.container {
	margin-left: auto;
	margin-right: auto;
}

.selectedCourseTable {
	text-align: center;
	background-color: var(--white);
	font-family: 'Montserrat', sans-serif;
	
	/* border: none !important; */
	border-radius: .7rem !important;
	margin: 2vh auto !important;
	width: 100%;

}

.selectedCourseHead {
	background-color: var(--card-header-color);
	border-radius: .7rem;
	border: none !important;
}

.selectedCourseTable tr, td, th {
	border: none !important;
	padding: 5px;
}

.selectedCourseBody {
	border: none !important;
	background-color: var(--card-background-color);
}

.creditsRow {
	border-top: 1px solid black !important;
}

table tr:last-child td:first-child {
	border-bottom-left-radius: 0.7rem;
}

table tr:last-child td:last-child {
	border-bottom-right-radius: 0.7rem;
}

table tr:first-child th:first-child {
	border-top-left-radius: 0.7rem;
}

table tr:first-child th:last-child {
	border-top-right-radius: 0.7rem;
}

